@@ -1,6 +1,6 @@
 % File src/library/stats/man/box.test.Rd
 % Part of the R package, http://www.R-project.org
-% Copyright 1995-2007 R Core Development Team
+% Copyright 1995-2008 R Core Development Team
 % Distributed under GPL 2 or later
 
 \name{Box.test}
@@ -11,13 +11,21 @@
   null hypothesis of independence in a given time series.
 }
 \usage{
-Box.test(x, lag = 1, type = c("Box-Pierce", "Ljung-Box"))
+Box.test(x, lag = 1, type = c("Box-Pierce", "Ljung-Box"), fitdf = 0)
 }
 \arguments{
   \item{x}{a numeric vector or univariate time series.}
   \item{lag}{the statistic will be based on \code{lag} autocorrelation
     coefficients.}
   \item{type}{test to be performed: partial matching is used.}
+  \item{fitdf}{number of degrees of freedom to be subtracted if \code{x}
+    is a series of residuals.}
+}
+\details{
+  These tests are sometimes applied to the residuals from an
+  \code{ARMA(p, q)} fit, in which case the references suggest a better
+  approximation to the null-hypothesis distribution is obtained by
+  setting \code{fitdf = p+q}, provided of course that \code{lag > fitdf}.
 }
 \note{
   Missing values are not handled.
@@ -38,11 +46,11 @@ Box.test(x, lag = 1, type = c("Box-Pierce", "Ljung-Box"))
   moving average time series models.
   \emph{Journal of the American Statistical Association}, \bold{65},
   1509--1526.
-    
+
   Ljung, G. M. and Box, G. E. P. (1978),
   On a measure of lack of fit in time series models.
   \emph{Biometrika} \bold{65}, 553--564.
-  
+
   Harvey, A. C. (1993)
   \emph{Time Series Models}.
   2nd Edition, Harvester Wheatsheaf, NY, pp. 44, 45.
